--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,16 +2,16 @@
 </div>
 <footer class="footer">
   <small class="railstutorial">
-    <a href="http://railstutorial.org/">Rails Tutorial</a>
-    by Michael Hartl
+    <a href="https://www.facebook.com/Arabadzhy-Dmitriy-212539849313114/">@Dmitriy Arabadzhy</a>
+    by Tesl@Vova
   </small>
-  <small class="Tesl" >Tesl@Vova</small>
+  <small class="Tesl"  >Tesl-n-Co</small>
   <nav class="col-md-6 .col-md-offset-6" style="background-position: center">
     <ul style="position: relative; left: 75px;
         top: 22px;">
       <li><%= link_to "About",   about_path %></li>
       <li><%= link_to "Contact", contact_path%></li>
-      <li><%= link_to "Git Hub", "https://github.com/Teslenko/Hakaton_Recruiter"%></li>
+      <li><%= link_to "Portfolio", "https://www.yooying.com/dmitriy_arabadzhy"%></li>
       <!--<li><a href="https://github.com/Teslenko/RecruitingTime">Git Hub</a></li>-->
     </ul>
   </nav>
