--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,8 +2,10 @@
 <h1>Contact</h1>
 <div style="text-align: center; padding-bottom: 20px;">
 <p>
- <strong> Contact with me -   <a href="https://www.linkedin.com/in/akvelibrium/"><b>Volodymir Teslenko</b></a></strong> <br>
-  <strong>Skype - akvelibrium02</strong>
-  <%= link_to image_tag("recruiting_5.jpg", alt: "Rails") %>
+ <strong style="color: #938d1a"> Contact with me -   <a href="https://www.facebook.com/Arabadzhy-Dmitriy-212539849313114/"><b style="color: #938d1a">Dmitriy Arabadzhy</b></a></strong> <br>
+  <strong>📱 - +380989787298; +380631542754</strong>
+
 </p>
   </div>
+<div style="text-align: center; padding-bottom: 20px;">
+<%= link_to image_tag("Remen.jpg", alt: "Rails") %> </div>
