--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,13 +1,13 @@
 <%= form_with(model: [ @candidate, @candidate.comments.build ], local: true) do |form| %>
   <p>
-    <%= form.label :commenter %><br>
+    <%= form.label :"Кто комментирует" %><br>
     <%= form.text_field :commenter %>
   </p>
   <p>
-    <%= form.label :body %><br>
+    <%= form.label :Комментарий %><br>
     <%= form.text_area :body %>
   </p>
   <p>
-    <%= form.submit  class: 'btn btn-primary' %>
+    <%= form.submit :"Создать комментарий", class: 'btn-sm btn-primary' %>
   </p>
 <% end %>
