--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,30 +1,24 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
-    <div class="Logoimage" style="margin: 5px 0 5px 40px">
-
-      <%= link_to(image_tag("know_your_third-party.png", size: "100x100", :alt => "rss feed", id:'booksget_logo'), candidates_url )%>
-
-    </div><!--тут ссылка на картинку-->
     <div class="container">
-      <div class="p1" style="text-align: center; padding: 14px;
-          height: 30px;
-          position: relative;
-          padding-left: 60px;
-          top: 50px;
-          left: -49px;"> <%= link_to "App", candidates_url, id: "logo" %></div>
+      <i style="text-align: center;
+          position: absolute;
+          right: 300px;
+          padding-top: 33px"><%#= link_to "Tesl-n-Co", candidates_url, id: "logo" %></i>
 
-         <%#= link_to "Home",    home_path %>
-         <%#= link_to "Help",    help_path %>
+      <b style="text-align: right;
+          position: absolute;
+          right: 45px;
+          padding-top: 33px"><%= link_to 'Welcome Page', root_path, class:"btn btn-large btn-primary" %></b>
 
-      <nav class="nav pull-right buttons">
-          <div style="text-align: center; padding-bottom: 10px;"> <%= link_to "Tesl-n-Co", candidates_url, id: "logo" %></div>
-        <!--#"Tesl Engineering", candidates_url, id: "logo" %></div>-->
-        <br><br>
-        <div style="text-align: right;" >
-          <%= link_to 'Welcome Page', root_path, class:"btn btn-large btn-primary" %> </div>
-      </nav>
-  </div>
+
+      <%= link_to(image_tag("Arab_Logotype.png", size: "230x100", :alt => "rss feed", id:'booksget_logo'), candidates_url )%>
+
+
+
+
+
+
     </div>
   </div>
-
 </header>
