--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,14 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-    <%= favicon_link_tag 'FastHunter_logo.ico' %> <!--тут лежить логотип для страницы для вкладки-->
+    <%= favicon_link_tag 'Arab_logo.ico' %> <!--тут лежить логотип для страницы для вкладки-->
 
   </head>
   <!--##############################---Search--#############################################-->
   <div class="container search_margin_top" style="padding-top: 120px">
     <%#= label_tag(:q, "Search for:") %>
     <%= form_with url: search_path, local: true, method: :get do |form| %>
-        <%= form.text_field :q, :size =>"40", placeholder: "Search yours Candidate", data:{behavior: "autocomplete"}, class: "form-control width_of_search" %>
+        <%= form.text_field :q, :size =>"40", placeholder: "Search", data:{behavior: "autocomplete"}, class: "form-control width_of_search" %>
         <div class="ttt" style="padding-top: 10px; width: 156px; margin: 0px; position:absolute; top: 231px; left: 1230px; ">
           <%= form.button "Search", class: "btn btn-large btn-primary", id:"search" %>
         </div>
