--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Fast Hunter|Tesl Engineering<%= yield(:title) %></title>
+  <title>Arabadzhy Production|Tesl Engineering<%= yield(:title) %></title>
 </head>
 <body>
 
