--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -13,9 +13,9 @@
 
     <h3 ><%= @candidate.name %> </h3>
 
-    <h3>
-      Candidates status: <%= @candidate.status %>
-    </h3>
+    <!--<h3>-->
+    <!-- Candidates status:--> <%#= @candidat  e.status %>
+    <!--</h3>-->
 
 <table class="table  table-striped fixedtable" >
 
