--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -36,10 +36,10 @@
 
 
 
-    <tr>
-      <td  class="col-md-2 left">Статус Товара:</td>
-      <td class="right"> <%= @candidate.status %></td>
-    </tr>
+    <!--<tr>-->
+      <!--<td  class="col-md-2 left">Статус Товара:</td>-->
+      <!--<td class="right"> <%#= @candidate.status %></td>-->
+    <!--</tr>-->
 
 
 
