--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -32,7 +32,7 @@
       <th>Название</th>
       <th>Описание</th>
       <!--<th></th>-->
-      <th>Статус Товара</th>
+      <!--<th>Статус Товара</th>-->
       <th></th>
 
       <th colspan="3"></th>
@@ -50,7 +50,7 @@
         <td><%= candidate.name %></td>
         <td><%= candidate.description %></td>
         <!--<td><%#= candidate.dev_language %></td>-->
-        <td><%= candidate.status %></td>
+        <!--<td><%#= candidate.status %></td>-->
         <td><%= link_to 'Show', candidate,class: "btn btn-large btn-primary", type: "button" %></td>
         <td><%= link_to 'Edit', edit_candidate_path(candidate),class: "btn btn-large btn-primary", type: "button" %></td>
         <td >
