--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -52,10 +52,10 @@
 <br>
     <br>
 
-<H3>Добавить комментарий:</H3><br><br>
+<!--<H3>Добавить комментарий:</H3><br><br>-->
 
-      <%= render @candidate.comments %>
-      <%= render 'comments/form' %>
+      <%#= render @candidate.comments %>
+      <%#= render 'comments/form' %>
 
 
   </div>
