--- a/app/views/candidates/reserved.html.erb
+++ b/app/views/candidates/reserved.html.erb
@@ -1,18 +1,17 @@
-<h1> Reserved candidates: </h1>
+<h1> Товары в резерве: </h1>
 <% if @reserveds.present? %>
 	
 		<table class="table">
 
       <div style="padding-left: 20px">
-        <%= link_to 'Home', candidates_path, class: "btn btn-large btn-primary" %>
+        <%= link_to 'Вернуться к каталогу', candidates_path, class: "btn btn-large btn-primary" %>
       </div>
 		  <thead>
 		    <tr>
 		    	<th></th>
-		      <th>Name</th>
-		      <th>Description</th>
-		      <th>Developing language</th>
-		      <th>Status</th>
+		      <th>Название</th>
+		      <th>Описание</th>
+		      <th>Статус</th>
 		    </tr>
 		  </thead>
 		  <tbody>
@@ -21,9 +20,8 @@
           <td><%= link_to (image_tag reserved.image.thumb.url), candidate_path(reserved) %></td>
 		      <td><%= reserved.name %></td>
 		      <td><%= reserved.description %></td>
-		      <td><%= reserved.dev_language %></td>
 		      <td><%= reserved.status %></td>
-		      <td><%= link_to 'Show', candidate_path(reserved), class: 'btn btn-primary' %></td>
+		      <td><%= link_to 'Просмотр', candidate_path(reserved), class: 'btn btn-primary' %></td>
 		    </tr> 
 		  <% end %>     
 		  </tbody>
@@ -31,7 +29,7 @@
 
 		</table>
   <div style="padding-left: 20px">
-    <%= link_to 'Home', root_path, class: "btn btn-large btn-primary" %>
+    <%= link_to 'Вернуться к каталогу', root_path, class: "btn btn-large btn-primary" %>
   </div>
 	<% else %>
 	 <h3>You haven't reservered candidates</h3>		
