--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,9 +9,9 @@
   <nav class="col-md-6 .col-md-offset-6" style="background-position: center">
     <ul style="position: relative; left: 75px;
         top: 22px;">
-      <li><%= link_to "About",   about_path %></li>
-      <li><%= link_to "Contact", contact_path%></li>
-      <li><%= link_to "Portfolio", "https://www.yooying.com/dmitriy_arabadzhy"%></li>
+      <li><%= link_to "О нас",   about_path %></li>
+      <li><%= link_to "Контакты", contact_path%></li>
+      <li><%= link_to "Портфолию", "https://www.yooying.com/dmitriy_arabadzhy"%></li>
       <!--<li><a href="https://github.com/Teslenko/RecruitingTime">Git Hub</a></li>-->
     </ul>
   </nav>
