--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,13 +6,13 @@
           right: 300px;
           padding-top: 33px"><%#= link_to "Tesl-n-Co", candidates_url, id: "logo" %></i>
 
-      <b style="text-align: right;
+      <!--<b style="text-align: right;
           position: absolute;
           right: 45px;
-          padding-top: 33px"><%= link_to 'Welcome Page', root_path, class:"btn btn-large btn-primary" %></b>
+          padding-top: 33px"><%#= link_to 'На Главную', root_path, class:"btn btn-large btn-primary" %></b>-->
 
 
-      <%= link_to(image_tag("Arab_Logotype.png", size: "230x100", :alt => "rss feed", id:'booksget_logo'), candidates_url )%>
+      <%= link_to(image_tag("Arab_Logotype.png", size: "230x100", :alt => "rss feed", id:'booksget_logo'), root_path )%>
 
 
 
