--- a/app/views/candidates/_form.html.erb
+++ b/app/views/candidates/_form.html.erb
@@ -1,5 +1,5 @@
 <div style=" padding-bottom: 20px; padding-left: 70px" >
-  <%= link_to 'Home', candidates_path, class: 'btn btn-primary'  %>
+  <%= link_to 'Вернуться к каталогу', candidates_path, class: 'btn btn-primary'  %>
 </div>
 
 <%= form_with(model: candidate, local: true) do |form| %>
@@ -57,8 +57,9 @@
  <div style="padding-left: 25px" class="dropdown show" >
 
   <% unless current_page?(controller: 'candidates', action: 'new') %>
-       <div class="btn btn-large" style="background-color: #99ddd8;" type="button" data-toggle="dropdown"><%= form.select :status, [['В Продаже'], ['В Резерве'], ['Продан']], selected: 'В Продаже' %></div>
-     <b>     - Select group for candidate</b>
+       <div class="btn btn-large" style="background-color: #99ddd8;" type="button" data-toggle="dropdown">
+         <%= form.select :status, [['В Продаже'], ['В Резерве'], ['Продан']], selected: 'В Продаже' %></div>
+     <b>     - Выберете группу товара</b>
   <% end %>
 
 
@@ -66,6 +67,6 @@
 
 
   <div class="actions" style="text-align: center; ">
-    <%= form.submit  class: 'btn btn-large btn-primary' %>
+    <%= form.submit "Обновить/Создать", class: 'btn btn-large btn-primary' %>
   </div>
 <% end %>
