--- a/app/views/candidates/black_list.html.erb
+++ b/app/views/candidates/black_list.html.erb
@@ -3,15 +3,14 @@
 	
 		<table class="table">
       <div style="padding-left: 20px">
-      <%= link_to 'Home', candidates_path, class: "btn btn-large btn-primary" %>
+      <%= link_to 'Вернуться к каталогу', candidates_path, class: "btn btn-large btn-primary" %>
         </div>
 		  <thead>
 		    <tr>
 		    	<th></th>
-		      <th>Name</th>
-		      <th>Description</th>
-		      <th>Developing language</th>
-		      <th>Status</th>
+		      <th>Название</th>
+		      <th>Описание</th>
+		      <th>Статус</th>
 		       <th colspan="3"></th>
 		    </tr>
 		  </thead>
@@ -21,9 +20,9 @@
           <td><%= link_to (image_tag blist.image.thumb.url), candidate_path(blist) %></td>
 		      <td><%= blist.name %></td>
 		      <td><%= blist.description %></td>
-		      <td><%= blist.dev_language %></td>
+
 		      <td><%= blist.status %></td>
-		      <td><%= link_to 'Show', candidate_path(blist), class: 'btn btn-primary' %></td>
+		      <td><%= link_to 'Просмотр', candidate_path(blist), class: 'btn btn-primary' %></td>
 		    </tr> 
 		  <% end %>     
 		  </tbody>
@@ -32,7 +31,7 @@
 
 		</table>
   <div style="padding-left: 20px">
-  <%= link_to 'Home', root_path, class: "btn btn-large btn-primary" %>
+  <%= link_to 'Вернуться к каталогу', root_path, class: "btn btn-large btn-primary" %>
   </div>
 	<% else %>
 	 <h3>No candidates in your black list</h3>	
