--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -32,7 +32,7 @@
       <th>Название</th>
       <th>Описание</th>
       <!--<th></th>-->
-      <!--<th>Статус Товара</th>-->
+      <th>Статус Товара</th>
       <th></th>
 
       <th colspan="3"></th>
@@ -49,13 +49,12 @@
         </td>
         <td><%= candidate.name %></td>
         <td><%= candidate.description %></td>
-        <!--<td><%#= candidate.dev_language %></td>-->
-        <!--<td><%#= candidate.status %></td>-->
-        <td><%= link_to 'Show', candidate,class: "btn btn-large btn-primary", type: "button" %></td>
-        <td><%= link_to 'Edit', edit_candidate_path(candidate),class: "btn btn-large btn-primary", type: "button" %></td>
+        <td><%= candidate.status %></td>
+        <td><%= link_to 'Просмотр', candidate,class: "btn btn-large btn-primary", type: "button" %></td>
+        <td><%= link_to 'Редактировать', edit_candidate_path(candidate),class: "btn btn-large btn-primary", type: "button" %></td>
         <td >
-            <%= link_to 'Destroy', candidate, method: :delete,
-                         data: { confirm: 'Are you sure?' },class: "btn btn-large btn-primary", type: "button" %>
+            <%= link_to 'Удалить', candidate, method: :delete,
+                         data: { confirm: 'Вы уверенны, что хотите удалить?' },class: "btn btn-large btn-primary", type: "button" %>
         </td>
       </tr>
   <% end %>
@@ -64,9 +63,9 @@
 
 
 <div style="padding-left: 10px" >
-  <%= link_to 'New Candidate', new_candidate_path, class: 'btn btn-primary',  class: "btn btn-large btn-primary", type: "button" %>
-  <%= link_to 'Black List', black_list_path, class: 'btn btn-primary',  class: "btn btn-large btn-primary", type: "button" %>
-  <%= link_to 'Reserved', reserved_path, class: 'btn btn-primary',  class: "btn btn-large btn-primary", type: "button" %>
+  <%= link_to 'Создать Новый Товар', new_candidate_path, class: 'btn btn-primary',  class: "btn btn-large btn-primary", type: "button" %>
+  <%= link_to 'Проданный Товар', black_list_path, class: 'btn btn-primary',  class: "btn btn-large btn-primary", type: "button" %>
+  <%= link_to 'Резерв', reserved_path, class: 'btn btn-primary',  class: "btn btn-large btn-primary", type: "button" %>
   <br>
 </div>
 
