--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,8 +7,10 @@
 <body>
 
 <% provide(:title, 'Home') %>
-<h1>Sample App</h1>
-
+<h1>ИЗДЕЛИЯ ИЗ НАТУРАЛЬНОЙ КОЖИ</h1>
+<button style="background-position:center; position: center", class="favth-btn">
+  <%= link_to 'Админка', candidates_path, class: "btn btn-mini btn-warning", type: "button"%>
+</button>
 
 <div style="display: grid;
     grid-template-columns: auto auto auto auto;
@@ -50,7 +52,7 @@
 <div class="navbar-nav pull-xs-rigth">
 <!--Show Home Page-->
   <button style="background-position:center; position: center", class="favth-btn">
-    <%= link_to 'Show Home Page', candidates_path, class: "btn btn-mini btn-warning", type: "button"%>
+    <%= link_to 'Админка', candidates_path, class: "btn btn-mini btn-warning", type: "button"%>
   </button>
 <br><br>
 
