--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -82,7 +82,7 @@ footer {
     padding: 20px;
     font-size: 17px;
     &:hover {
-      color: #222;
+      color: #171add;
     }
   }
   small {
