--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Contact') %>
-<h1>Contact</h1>
+<h1>Контакты</h1>
 <div style="text-align: center; padding-bottom: 20px;">
 <p>
  <strong style="color: #938d1a"> Contact with me -   <a href="https://www.facebook.com/Arabadzhy-Dmitriy-212539849313114/"><b style="color: #938d1a">Dmitriy Arabadzhy</b></a></strong> <br>
