--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'About Us') %>
+<% provide(:title, 'О Нас') %>
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,13 +6,13 @@
 </head>
 <body>
 
-<% provide(:title, 'About Us') %>
-<h1>About Us</h1>
+<% provide(:title, 'О Нас') %>
+<h1>О Нас</h1>
 <p>
-  The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  is a project to make a book and screencasts to teach web development
-  with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
-  is the sample application for the tutorial.
+  Шью с любовью для Вас👐🛠
+  DMITRIY ARABADZHY .<br>
+  По желанию можно изменить цвет изделия,цвет нити, размеры и т.д.🔝Принимаю заказы на индивидуальный пошив аксессуаров из натуральной кожи!Цена каждого изделия индивидуальна, для заказа пишите в Direct, Viber,WhattsApp📩
 </p>
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
