--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -49,7 +49,7 @@
         </td>
         <td><%= candidate.name %></td>
         <td><%= candidate.description %></td>
-        <td><%#= candidate.status %></td>
+        <td><%= candidate.status %></td>
         <td><%= link_to 'Просмотр', candidate,class: "btn btn-large btn-primary", type: "button" %></td>
         <td><%= link_to 'Редактировать', edit_candidate_path(candidate),class: "btn btn-large btn-primary", type: "button" %></td>
         <td >
