--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -6,8 +6,8 @@
 </head>
 <!--////////body//////-->
 <body>
-<p id="notice"><%= notice %></p>
-<h1>Candidates</h1>
+
+<h1>Продукт</h1>
 <div style="padding-left: 10px;
     position: relative;" >
 
