--- a/app/views/candidates/new.html.erb
+++ b/app/views/candidates/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Candidate</h1>
+<h1>Создать Новый Продукт</h1>
 
 <%= render 'form', candidate: @candidate, class: 'btn btn-primary' %>
 <div class="actions" style="padding-left: 25px ">
