--- a/app/views/candidates/edit.html.erb
+++ b/app/views/candidates/edit.html.erb
@@ -3,7 +3,7 @@
 <%= render 'form', candidate: @candidate %>
 
 <div class="actions" style="text-align: center; ">
-  <%= link_to 'Удалить Товар', @candidate, method: :delete, data: { confirm: 'Вы уверенны, что хотите удалить?' }, class: 'btn btn-primary' %>
+  <%= link_to 'Удалить Товар', @candidate, method: :delete, data: { confirm: 'Вы уверенны, что хотите удалить?' }, class: 'btn btn-sm btn-danger' %>
 </div>
 <div class="actions" style="text-align: left; padding-left: 25px ">
 <%= link_to 'К Просмотру Товара', @candidate, class: 'btn btn-primary' %> |
