--- a/app/views/candidates/home_list.html.erb
+++ b/app/views/candidates/home_list.html.erb
@@ -26,4 +26,4 @@
 	<% else %>
 	 <h3>You haven't home candidates</h3>		
 <% end %>	
-<%= link_to 'Home', root_path, class: 'btn btn-secondary' %>
+<%= link_to 'Вернуться к каталогу', root_path, class: 'btn btn-secondary' %>
