--- a/app/views/candidates/new.html.erb
+++ b/app/views/candidates/new.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', candidate: @candidate, class: 'btn btn-primary' %>
 <div class="actions" style="padding-left: 25px ">
-<%= link_to 'Home', candidates_path, class: 'btn btn-primary' %>
+<%= link_to 'Вернуться к каталогу', candidates_path, class: 'btn btn-primary' %>
 </div>
