--- a/app/views/candidates/reserved.html.erb
+++ b/app/views/candidates/reserved.html.erb
@@ -32,7 +32,7 @@
     <%= link_to 'Вернуться к каталогу', root_path, class: "btn btn-large btn-primary" %>
   </div>
 	<% else %>
-	 <h3>You haven't reservered candidates</h3>		
+	 <h3>Сейчас нет товара в резерве</h3>
 <% end %>
 
 
