--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -5,6 +5,7 @@ body {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+
 }
 
 p, ol, ul, td {
@@ -12,7 +13,18 @@ p, ol, ul, td {
   font-size: 13px;
   line-height: 18px;
 }
-
+.gridtesl{
+  display: grid;
+  grid-template-columns:auto auto auto auto auto auto ;
+  //500px 100px 500px 100px;
+  grid-gap: 50px;
+  background-color: #2196F3;
+  /*padding: 10px;*/
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding:20px 0;
+  font-size: 30px;
+}
 pre {
   background-color: #eee;
   padding: 10px;
