--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -8,11 +8,17 @@
 
 <% provide(:title, 'О Нас') %>
 <h1>О Нас</h1>
-<p>
-  Шью с любовью для Вас👐🛠
-  DMITRIY ARABADZHY .<br>
+<h4 style="text-align: center">Шью с любовью для Вас👐🛠</h4>
+<p  style="padding-left: 25px; text-align: center"> Принимаем заказы на изготовление товара из кожи, на любой вкус и сложность изготовление</p>
+<p  style="padding-left: 25px; text-align: center"><br>
+
+<br>
   По желанию можно изменить цвет изделия,цвет нити, размеры и т.д.🔝Принимаю заказы на индивидуальный пошив аксессуаров из натуральной кожи!Цена каждого изделия индивидуальна, для заказа пишите в Direct, Viber,WhattsApp📩
 </p>
-<br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br>
+<div style="text-align: center; padding-bottom: 20px;">
+  <%= image_tag("Arab_people.jpg") %> </div>
+
+<p style="padding-left:50px">DMITRIY ARABADZHY.</p>
 </body>
 </html>
